--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-aria.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular-messages.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angular_material/1.0.0/angular-material.min.js"></script>
+    <script src='http://rawgit.com/angular-google-chart/angular-google-chart/master/ng-google-chart.min.js'></script>
     
     <script src='/app.js'></script>
 
