fixed paths that werent fixed the first time

--- a/_matchscout.html
+++ b/_matchscout.html
@@ -51,7 +51,7 @@
             <td class='label'>Last Match</td>
             <td>
               <span ng-repeat='match in lastMatchData | orderBy: "side"' class='team {{match.side}}'>
-                <a ng-href='/#/team/{{match.team}}'>
+                <a ng-href='#/team/{{match.team}}'>
                   {{match.team}}
                 </a>
               </span>
