--- a/_matchscout.html
+++ b/_matchscout.html
@@ -12,42 +12,7 @@
         <div layout='column'>
           <article ng-repeat='(section, data) in scout' flex>
             <h4 class='md-title autocap'>{{section}}</h3>
-            <div ng-repeat='(key, val) in data'>
-
-              <div ng-if="scoutMeta[key].type=='boolean'">
-                <md-checkbox ng-model='data[key]' ng-if="scoutMeta[key].type=='boolean'" class='autocap'>
-                  {{scoutMeta[key].name}}
-                </md-checkbox>
-              </div>
-
-              <div ng-if="scoutMeta[key].type=='string'">
-                <md-input-container>
-                  <label class='autocap'>{{scoutMeta[key].name}}</label>
-                  <input type="text" ng-model='data[key]'>
-                </md-input-container>
-                </div>
-              
-              <div ng-if="scoutMeta[key].type=='number'">
-                <md-input-container>
-                  <label class='autocap'>{{scoutMeta[key].name}}</label>
-                  <input type="number" ng-model='data[key]'>
-                </md-input-container>
-              </div>
-
-              <div ng-if="scoutMeta[key].type=='image'">
-                <span class='autocap'>{{scoutMeta[key].name}}</span><br/>
-                <span class='cursor' style='position: absolute; border: thick solid white; border-radius: 50%; width: 1em; height: 1em;'></span>
-                <img ng-src="{{scoutMeta[key].options.src}}" ng-click='handleImageInput($event)'/>
-              </div>
-              
-              <div ng-if="scoutMeta[key].type=='radio'">
-                <md-radio-group ng-model='data[key]'>
-                  <md-radio-button ng-repeat='(key, label) in scoutMeta[key].options' ng-value='key'>
-                    {{label}}
-                  </md-radio-button>
-                </md-radio-group>
-              </div>
-
+            <div ng-repeat='(key, val) in data' ng-include="'templates/'+scoutMeta[key].type+'.html'">
             </div>
           </article>
           <md-button class='md-raised md-primary' ng-click='submit()'>
