--- a/_matchscout.html
+++ b/_matchscout.html
@@ -1,25 +1,27 @@
 <section layout='column'>
-  <section layout-gt-md='row' layout='column'>
-    <md-card flex>
-      <md-card-title>
-        <md-card-title-text>
-          <span class="md-headline">New Match Scout</span>
-          <span class="md-subhead">Scout a match</span>
-        </md-card-title-text>
-      </md-card-title>
+  <md-card flex>
+    <md-card-title>
+      <md-card-title-text>
+        <span class="md-headline">New Match Scout</span>
+        <span class="md-subhead">Scout a match</span>
+      </md-card-title-text>
+    </md-card-title>
+    <md-button class='md-raised md-primary' ng-click='submit()'>
+      Submit
+    </md-button>
+      {{scout}}
+  </md-card>
 
-      <md-card-content layout-padding>
-        <div layout='column'>
-          <article ng-repeat='(section, data) in scout' flex>
-            <h4 class='md-title autocap'>{{section}}</h3>
-            <div ng-repeat='(key, val) in data' ng-include="'templates/'+scoutMeta[key].type+'.html'">
-            </div>
-          </article>
-          <md-button class='md-raised md-primary' ng-click='submit()'>
-            Submit
-          </md-button>
-        </div>
-      </md-card-content>
-    </md-card>
-  </section>
+  <md-card ng-repeat='(section, data) in scout' flex>
+    <md-card-title>
+      <md-card-title-text>
+        <span class="md-headline autocap">{{section}}</span>
+      </md-card-title-text>
+    </md-card-title>
+
+    <md-card-content layout-padding>
+      <div ng-repeat='(key, val) in data' ng-init='name=scoutMeta[key].name' ng-include="'templates/'+scoutMeta[key].type+'.html'">
+      </div>
+    </md-card-content>
+  </md-card>
 </section>
