--- a/_team.html
+++ b/_team.html
@@ -66,7 +66,7 @@
           <th>Blue</th><th></th><th></th>
           <th>Score</th><th></th>
         </tr>
-        <tr ng-repeat="data in tournament.matches" ng-if='data.description.li.includes(teamNumber)'>
+        <tr ng-repeat="data in tournament.matches | sortMatches" ng-if='data.description.li.includes(teamNumber)'>
           <td>{{data.title}}</td>
           <td ng-repeat="(id, team) in data.description.li" class='team' ng-class='{red: id<3, blue: id>=3, bold: team==teamNumber}'>
             <a ng-href='#/team/{{team}}'>
