Comment out add match
Dangit Isaac.

--- a/_editmatch.html
+++ b/_editmatch.html
@@ -8,6 +8,7 @@
 
       <md-card-content>
         <table>
+        <!-- for adding matches (not needed)
           <tr>
             <th>Add</th>
             <th>Match</th>
@@ -58,6 +59,7 @@
               <input type="text" class='team' size="2" placeholder="0">
             </td>
           </tr><tr><td><br></td></tr>
+          -->
           <tr>
             <th>Move</th>
             <th>Match</th>
